--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,9 @@
     </main>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script type="text/javascript" src="twilio.min.js"></script>
+    <!-- <script type="text/javascript" src="twilio.min.js"></script> -->
+    <!-- <script type="text/javascript" src="twilio.min.2.1.0-rc2.js"></script> -->
+    <script type="text/javascript" src="twilio.min.2.1.0-rc1.js"></script>
     <script src="quickstart.js"></script>
   </body>
 </html>
